--- a/.gitconfig
+++ b/.gitconfig
@@ -1,13 +1,16 @@
 [user]
-name = Humberto Piaia
-email = betopiaia@gmail.com
+	name = Humberto Piaia
+	email = betopiaia@gmail.com
 
 [alias]
-lg = log --all --graph --decorate --oneline --abbrev-commit
-co = checkout
-cm = commit
-ac = !git add -A && git commit
-st = status -sb
-tags = tag -l
-branches = branch -a
-remotes = remote -v
+	lg = log --all --graph --decorate --oneline --abbrev-commit
+	co = checkout
+	cm = commit
+	ac = !git add -A && git commit
+	st = status -sb
+	tags = tag -l
+	branches = branch -a
+	remotes = remote -v
+
+[push]
+	default = current
