--- a/.gitconfig
+++ b/.gitconfig
@@ -21,3 +21,9 @@ rebase = false
 
 [init]
 defaultBranch = main
+
+[filter "lfs"]
+clean = git-lfs clean -- %f
+smudge = git-lfs smudge -- %f
+process = git-lfs filter-process
+required = true
