--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,28 +7,48 @@ set -g default-terminal "screen-256color"
 
 # use C-w as prefix
 unbind C-b
-unbind l
 set -g prefix C-w
-
-# ensure that we can send Ctrl-A to other apps
 bind C-w send-prefix
 
+# enable mouse
+set -g mouse on
+
+# set base index for windows and panes
+set -g base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on
+
 # reload key
-bind r source-file ~/.tmux.conf \; display 'Reloaded!'
+bind r source-file ~/.config/tmux/tmux.conf \; display 'Reloaded!'
 
 # clear both screen and history
 bind -n C-l send-keys C-l \; run 'sleep 0.2' \; clear-history
 
-# pane navigation
-bind -r h select-pane -L  # move left
-bind -r j select-pane -D  # move down
-bind -r k select-pane -U  # move up
-bind -r l select-pane -R  # move right
-bind > swap-pane -D       # swap current pane with the next one
-bind < swap-pane -U       # swap current pane with the previous one
+# window and pane navigation
+bind -r h select-pane -L # move left
+bind -r j select-pane -D # move down
+bind -r k select-pane -U # move up
+bind -r l select-pane -R # move right
+
+bind > swap-pane -D # swap current pane with the next one
+bind < swap-pane -U # swap current pane with the previous one
+
+bind - split-window -vc "#{pane_current_path}"
+bind | split-window -hc "#{pane_current_path}"
+
+bind Space last-window
+bind-key C-Space switch-client -l
 
 # pane resizing
 bind -r H resize-pane -L 2
-bind -r J resize-pane -D 3
-bind -r K resize-pane -U 3
+bind -r J resize-pane -D 2
+bind -r K resize-pane -U 2
 bind -r L resize-pane -R 2
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
